removed the date from education section

--- a/index.html
+++ b/index.html
@@ -127,15 +127,13 @@
                 <li class="no-bullet">
                     <div class="l-Section-content">
                         <h3>Tulane University, New Orleans</h3>
-                        <a>PhD in Chemical Engineering</a><br> 2013 - 2019<br>
-                        <span>GPA: 3.95</span>
+                        <a>PhD in Chemical Engineering</a>
                     </div>
                 </li>
                 <li class="no-bullet">
                     <div class="l-Section-content">
                         <h3>Obafemi Awolowo University, Nigeria</h3>
-                        <a>BSc in Chemical Engineering</a><br> 2005 - 2011<br>
-                        <span>GPA: 3.49</span>
+                        <a>BSc in Chemical Engineering</a>
                     </div>
                 </li>
             </ul>
