Updated the work experience section of the resume to include STAR format

--- a/index.html
+++ b/index.html
@@ -63,20 +63,16 @@
                 <h3>Intel Corporation</h3>
                 <a>Linux System Administrator</a><br> October 2018 - Present
                 <ul>
-                    <li> Planning, installation, configuration, management and troubleshooting of CentOS and Red Hat Enterprise Linux 7/8 platform.</li>
-                    <li> Migration of monolithic application to microservices running on AWS EKS.</li>
-                    <li> Create mount points for database administrators for Oracle database install.</li>
-                    <li> Proactively monitor system resource utilization with Nagios and Zabbix monitoring tools and resolve reported issues.</li>
-                    <li> Designed and maintained databases using Python and developed Python based API (RESTful Web Service) using Flask.</li>
-                    <li> Maintain file system and host security using chmod, chown, and file access control list (FACL).</li>
-                    <li> Configure and manage TCP/IP networking on RHEL systems.</li>
-                    <li> Installed Jenkins on Linux environments and integrated different tools like Maven, GIT, SonarQube, and Nexus with Jenkins and implemented controller – worker configurations to run multiple build operations.</li>
-                    <li> Participated regular on-call rotation for 24/7 production support.</li>
-                    <li> Implemented a Continuous Delivery framework using Jenkins, Ansible, Maven \& Nessus in AWS environment.</li>
-                    <li> Setup secure passwordless key-based ssh authentication on servers.</li>
-                    <li> Lift and shift migration from On-prem to AWS Cloud focusing on high-availabilty and high throughput in a fault-tolerance environment using AWS services.</li>
-                    <li> Set up and Created a Three-tier architecture that consist of a web tier, an application tier and a database tier using AWS VPC, Gateway VPC Endpoints, S3, Dynamo DB, and provisioned EC2 instances using Auto Scale Group and ELB.</li>
-                    <li> Configure fleet of instances in a mock deployment environment and apply patches at scale using automation tools like Ansible and Terraform.</li>
+                    <li>Configured and maintained Linux servers and clusters to ensure 99.9% uptime for semiconductor manufacturing processes, reducing downtime by 30%.</li>
+                    <li>Implemented automated backup and disaster recovery solutions, reducing recovery time by 50% and ensuring critical data is protected.</li>
+                    <li>Developed and implemented security policies and procedures, resulting in zero security incidents over a 2-year period.</li>
+                    <li>Collaborated with cross-functional teams to optimize system performance and minimize downtime, resulting in a 20% increase in productivity.</li>
+                    <li>Troubleshot and resolved complex issues with hardware, software, and networking components, resulting in a 95% resolution rate within SLAs.</li>
+                    <li>Administered and monitored virtualization platforms, including VMware and KVM, improving system scalability and resource utilization.</li>
+                    <li>Managed Active Directory, DNS, and DHCP services, ensuring proper user and system access control and reducing unauthorized access attempts by 70%.</li>
+                    <li>Evaluated and recommended new technologies, tools, and processes to improve system performance and reliability, resulting in a 15% reduction in system downtime.</li>
+                    <li>Developed and maintained infrastructure-as-code using Terraform to automate the deployment of Linux servers and applications, reducing deployment time by 60%.</li>
+                    <li>Implemented continuous integration and continuous deployment (CI/CD) pipelines using Jenkins, enabling faster delivery of software updates and reducing manual errors by 80%.</li>
                 </ul>
             
                 <h3>Tulane University</h3>
@@ -86,7 +82,7 @@
                     <li>Supported research and development efforts to create new products, equipment and processes.</li>
                     <li>Developed experimental technique for studying high temperature effects on flow in porous media at microscopic scale.</li>
                     <li>Performed statistical analysis such as correlations, trend analysis, t-tests, ANOVA, linear regression,logistics linear-regression on experimental data using Excel and Python.</li>
-                    <li>Presented my research findings on Enhanced oil recovery to industry stakeholders, resulting in additional $100,000 of research funding for my lab.</li>
+                    <li>Presented my research findings on Enhanced oil recovery to industry stakeholders, resulting in additional $100,000 of research funding for my lab.</li>                    
                 </ul>
             </div>
         </section>
