updated job title and job description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/chike-ezeh-069362269/" target="_blank">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/george-e-069362269/" target="_blank">Linkedin</a>
                 </li>
             </ul>
         </div>
@@ -61,28 +61,53 @@
             <h2 class="l-Section-title h3">Experience</h2>
             <div class="l-Section-content">
                 <h3>Intel Corporation</h3>
-                <a>Linux System Administrator</a><br> October 2018 - Present
+                <a>System Engineer</a><br> October 2018 - Present
                 <ul>
-                    <li>Configured and maintained Linux servers and clusters to ensure 99.9% uptime for semiconductor manufacturing processes, reducing downtime by 30%.</li>
-                    <li>Implemented automated backup and disaster recovery solutions, reducing recovery time by 50% and ensuring critical data is protected.</li>
-                    <li>Developed and implemented security policies and procedures, resulting in zero security incidents over a 2-year period.</li>
-                    <li>Collaborated with cross-functional teams to optimize system performance and minimize downtime, resulting in a 20% increase in productivity.</li>
-                    <li>Troubleshot and resolved complex issues with hardware, software, and networking components, resulting in a 95% resolution rate within SLAs.</li>
-                    <li>Administered and monitored virtualization platforms, including VMware and KVM, improving system scalability and resource utilization.</li>
-                    <li>Managed Active Directory, DNS, and DHCP services, ensuring proper user and system access control and reducing unauthorized access attempts by 70%.</li>
-                    <li>Evaluated and recommended new technologies, tools, and processes to improve system performance and reliability, resulting in a 15% reduction in system downtime.</li>
-                    <li>Developed and maintained infrastructure-as-code using Terraform to automate the deployment of Linux servers and applications, reducing deployment time by 60%.</li>
-                    <li>Implemented continuous integration and continuous deployment (CI/CD) pipelines using Jenkins, enabling faster delivery of software updates and reducing manual errors by 80%.</li>
+                    <li>Ensured 99.9% uptime for semiconductor manufacturing processes by maintaining and configuring Linux servers.</li>
+                    <li>Planned, installed, configured, managed, and troubleshot both virtual and physical servers.</li>
+                    <li>Developed Ansible playbooks to manage system configurations and automate repetitive tasks.</li>
+                    <li>Automated routine system tasks through bash scripting.</li>
+                    <li>Deployed Linux Operating System on physical Dell Server.</li>
+                    <li>Set up and managed Linux virtual machines on VMWare ESXi and VMWare vCenter.</li>
+                    <li>Integrated and managed users and servers/computers using Microsoft Active Directory.</li>
+                    <li>Created and managed local filesystems using both standard and LVM methods.</li>
+                    <li>Established and managed approved user accounts and groups locally and centrally through Microsoft Active Directory.</li>
+                    <li>Actively monitored system resource usage with Grafana tools and addressed reported issues.</li>
+                    <li>Preserved user-based security using password aging and sudoers.</li>
+                    <li>Maintained system-level security using firewalld to regulate access to ports and services.</li>
+                    <li>Enhanced security through System lockdowns.</li>
+                    <li>Configured and oversaw TCP/IP networking on RHEL systems.</li>
+                    <li>Troubleshot and solved network and performance problems.</li>
+                    <li>Conducted monthly system patches and updates, addressing critical vulnerabilities identified by the cyber security team.</li>
+                    <li>Integrated Linux systems with Red Hat Satellite for package management.</li>
+                    <li>Created and managed NFS file systems and shared them with multiple client machines</li>
+                    <li>Installed and configured LAMP stack for developer use.</li>
+                    <li>Performed essential system administration tasks in Single user mode.</li>
+                    <li>Configured and managed the Samba server for data sharing between Linux and Windows machines.</li>
+                    <li>Set up secure passwordless key-based ssh authentication on servers.</li>
+                    <li>Employed Atlassian Jira for issue ticket creation and resolution.</li>
+                    <li>Provided weekly reports to management regarding overall system performance and health checks</li>
+                    <li>Participated in regular on-call rotation for 24/7 production support.</li>
+                    <li>Built data pipeline in SQL and Python for parametric wafer measurement, resulting in a 25% increase in the productivity of technicians on the fab floor.</li>
+                    <li>Deployed several Python and SQL script on Linux servers to run at scheduled intervals for operational dashboards.</li>
+                    <li>Re-designed modules operational dashboards using SQL and Power-BI to include near real time trend plots that helped engineers identify potential quality issues, this resulted in 10% reduction in quality events.</li>
                 </ul>
             
                 <h3>Tulane University</h3>
                 <a>Research Scientist, Data Analytics</a><br> August 2013 - October 2018
                 <ul>
-                    <li>Built an image classification model for Enhanced oil recovery and oil spill remediation using Python and OpenCV, this resulted in a 50% increase in the time needed to select a suitable surfactant for EOR.</li>
-                    <li>Supported research and development efforts to create new products, equipment and processes.</li>
+                    <li>Leveraging the power of High Performance Computing (HPC) and parallel processing, I developed an
+                        image classification model for Enhanced Oil Recovery (EOR) and oil spill remediation using MATLAB
+                        and OpenCV. The model was efficiently executed on an HPC infrastructure managed by the SLURM
+                        workload manager, which significantly streamlined the computational operations. As a result, this
+                        led to a 50% increase in efficiency in the selection process of suitable surfactants for EOR, drastically
+                        reducing the overall computational time and accelerating the decision-making process.</li>
+                    <li>Gained hands-on experience with Linux system administration, specifically in RedHat and CentOS
+                        environments, enhancing system performance and reliability during intensive computational tasks.</li>
                     <li>Developed experimental technique for studying high temperature effects on flow in porous media at microscopic scale.</li>
                     <li>Performed statistical analysis such as correlations, trend analysis, t-tests, ANOVA, linear regression,logistics linear-regression on experimental data using Excel and Python.</li>
-                    <li>Presented my research findings on Enhanced oil recovery to industry stakeholders, resulting in additional $100,000 of research funding for my lab.</li>                    
+                    <li>Developed complex simulation models using batch system SLURM, effectively managing computational
+                        resources in an HPC environment and leading to more efficient data processing and analysis.</li>                    
                 </ul>
             </div>
         </section>
