--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="l-Wrapper l-Wrapper--reset@sm-down">
             <ul class="u-pullRight u-hidden@xs-down">
                 <li>
-                    <a class="Navbar-btn Navbar-btn--main" href="https://chikeezehdev.s3.amazonaws.com/chike_IT.pdf" target="_blank">Download 
+                    <a class="Navbar-btn Navbar-btn--main" href="https://chikeezehdev.s3.amazonaws.com/chike_systems.pdf" target="_blank">Download 
                     <span>(pdf)</span>
                     </a>
                 </li>
