--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class="l-Section-title h3">Experience</h2>
             <div class="l-Section-content">
                 <h3>Intel Corporation</h3>
-                <a>System Engineer</a><br> October 2018 - Present
+                <a>System Engineer</a><br> October 2018 - December 2023
                 <ul>
                     <li>Ensured 99.9% uptime for semiconductor manufacturing processes by maintaining and configuring Linux servers.</li>
                     <li>Planned, installed, configured, managed, and troubleshot both virtual and physical servers.</li>
